<resources>
    <string name="app_name">Marrakech-guide</string>
    <string name="new_user_register_now">New User ? Register Now</string>
    <string name="top_icon"> ICON</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="login"> LOGIN </string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="or">OR</string>
    <string name="google_icon"> google_icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="already">Already Have an Account?</string>

    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="registre">SIGN UP</string>
    <string name="signUpWith">OR SIGN UP WITH</string>
    <string name="create">CREATE ACCOUNT</string>


    <string name="getStarted"> Get Started</string>
    <string name="welcome">Welcome To </string>
    <string name="speak"> Marrakech Speech</string>
    <string name="horaire">
        Ouvert:  12:00 AM
        après-midi : 3:00 => 7:00 PM
    </string>
    <string name="title_str">Let\'s plan your next vacation !</string>
    <string name="marrakech_speak">Marrakech Speak</string>
    <string name="searching_for">Searching for...</string>
    <string name="restaurants">Restaurants</string>
    <string name="transport">Transport</string>
    <string name="hebergements">Hebergements</string>
    <string name="activity">Activity</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="new_str">new</string>
    <string name="nearest_to_you">Nearest To You</string>
    <string name="discover_the_charm_of_marrakech">Discover the charm of Marrakech</string>
    <string name="no_internet_connection">No internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_category">Select a Category</string>
    <string name="to_search_for">To search for</string>
    <string name="search_for_hotels">Search for hotels...</string>
    <string name="common_search_queries">Common Search Queries</string>
    <string name="searching_for_restaurants">Searching for restaurants</string>
    <string name="attractions">Attractions</string>

    <string name="mapbox_access_token">sk.eyJ1Ijoib3Vzc2FtYWVsaGQiLCJhIjoiY2xpaml3MTFhMDh0MjNxcGg0bm45eGp5ciJ9._n8UPscuh7Y89NzoJzZARA</string>
    <string name="not_logged_in_message">not logged in</string>
    <string name="back_button">back Button</string>

</resources>