<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SearchCategoriesFragment"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_category_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_category"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/text_category_prompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_category_prompt"
        android:text="@string/to_search_for"
        android:fontFamily="@font/poppins_regular"/>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignBounds"
        android:columnCount="1"
        android:layout_centerHorizontal="true"
        android:rowCount="4"
        android:layout_marginTop="16dp"
        android:padding="32dp"
        app:flow_horizontalGap="16dp"
        android:layout_below="@id/text_category_prompt2">

        <LinearLayout
            android:id="@+id/FragHotel"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:background="@drawable/hotel_bg"
            android:elevation="2dp"
            android:gravity="center"
            tools:ignore="MissingConstraints,TextSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/hebergements"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FragRest"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:background="@drawable/restaurant_bg"
            android:elevation="2dp"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/restaurants"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/FragMV"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:background="@drawable/activity_bg"
            android:elevation="2dp"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/attractions"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </GridLayout>
</RelativeLayout>