<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".Fragment.SearchRestaurantsFragment">

        <EditText
            android:id="@+id/editTextQuery"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/round_search_24"
            android:drawablePadding="16dp"
            android:elevation="@dimen/cardview_default_elevation"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/searching_for_restaurants"
            android:inputType="text"
            android:textSize="12sp"
            android:padding="8dp"
            android:textColorHint="#78909C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/common_search_queries"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextQuery" />
        <!-- Add a RecyclerView for common search queries -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCommonQueries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!-- Add a Button for voice-based search -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floatingActionButton"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="28dp"
            android:contentDescription="@string/speak"
            android:src="@drawable/round_mic_24"
            android:backgroundTint="@color/colorPrimary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
